add git-lfs to dockerfile instead

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,7 +12,7 @@ FROM rust:1.82.0 as output
 
 # install packages
 RUN cargo install just
-RUN apt-get update && apt-get install gnupg2 -y
+RUN apt-get update && apt-get install gnupg2 git-lfs -y
 
 # copy typst to bin
 COPY --from=builder /typst/target/release/typst /usr/local/bin/typst
